--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,10 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+/node/build/Release
 
 # Dependency directories
-node_modules/
+/node/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
